[package]
name = "tab-term"
version = "1.0.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
rand = "0.9.2"
ratatui = "0.29.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.141"
tokio = { version = "1.40.0", features = ["full"] }
ureq = { version = "3.0.12", features = ["json"] }
